Draw image in canvas

--- a/source/layouts/index.erb
+++ b/source/layouts/index.erb
@@ -6,5 +6,5 @@
 
   <%= yield %>
 
-  <%= image_tag 'palmtree.jpg', class: 'hidden' %>
+  <%= image_tag 'palmtree.jpg', id: 'palmtree', class: 'hidden' %>
 <% end %>
