Add explanitory text

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,3 +3,5 @@ title: Canvas Image Manipulation
 description: A canvas image manipulation example
 layout: index
 ---
+
+Use the above slider to modulate the duo-tone effect.
