--- a/source/layouts/index.erb
+++ b/source/layouts/index.erb
@@ -6,7 +6,7 @@
     </canvas>
 
     <div class='slider'>
-      <input class='slider__range' type='range' value='0' min='0' max='255'>
+      <input id='brightness-adjustment' class='slider__range' type='range' value='0' min='0' max='255'>
     </div>
 
     <%= yield %>
